
Given a version number MAJOR.MINOR.PATCH:

* MAJOR version when making incompatible API changes,
* MINOR version when adding functionality in a backwards compatible manner,
* PATCH version when making backwards compatible bug fixes.

== 2.2.0 - unreleased

=== Deprecated

* `var.ssh_authorized_keys` is deprecated. Use `var.ssh_public_keys`.

=== New features

* Add support for freeform and defined tags for instances, vnics and block volumes (Fix #10, #11, #12, #13, #18, #20)
* Add "module watermark" freeform tags: module defined and user defined freeform tags are merged on the final resource
* Add support to provide the `ssh_authorized_keys` argument as a string or as a file (Fix #67 #70)
* Provision instances with reserved Public IP
* [ ] Define a backup policy for boot volume and additional block volumes
* Add new outputs for each provisioned resources: "all_attributes" outputs have full provider coverage and are auto-updating.

=== Documentation

* Add add instructions on how to provide one or more public ssh keys using string, variable or file.

== 2.1.0 - 2021-03-02

=== New features

* support Flex instance shape (Issue #42)
* new output : instances_summary

=== Changes

* New examples for both Flex Instances and Fixed Shape Instances
* Documentation is now formatted with AsciiDoc

=== Fixes

* Outputs produces unnecessarily multidimensional objects (Issue #31)
* Repo maintenance:
** add .gitattributes for consistent line ending and tab

== 2.0.4 - 2021-02-13

=== Changes

* Terraform block now defines minimum terraform version and required providers. Block Moved to main.tf
* block volumes attachment type is now paravirtualized by default
* boot volume size default value is now passed by the service
* README content is automatically generated for the following sections: Requirements, Providers, Inputs, Outputs

=== Fixes

* Issue #41 - When regional subnets are used, the instance fails to detect the availability domain