@@ -37,15 +37,14 @@ module "instance_reserved_ip" {
   # operating system parameters
   ssh_authorized_keys = var.ssh_authorized_keys
   # networking parameters
-  assign_public_ip = var.assign_public_ip
-  public_ip        = var.public_ip
-  subnet_ocids     = var.subnet_ocids
+  public_ip    = var.public_ip # NONE, RESERVED or EPHEMERAL
+  subnet_ocids = var.subnet_ocids
   # storage parameters
   block_storage_sizes_in_gbs = [] # no block volume will be created
   preserve_boot_volume       = false
 }
 
 output "instance_reserved_ip" {
-  description = "ocid of created instances."
+  description = "IP information of the instances provisioned by this module."
   value       = module.instance_reserved_ip.instances_summary
 }
