@@ -126,8 +126,8 @@ variable "user_data" {
 # networking parameters
 
 variable "assign_public_ip" {
-  #! Deprecation notice: will be removed at next major release. Use "create_public_ip" instead.
-  description = "Whether the VNIC should be assigned a public IP address."
+  #! Deprecation notice: will be removed at next major release. Use `var.public_ip` instead.
+  description = "Deprecated: use `var.public_ip` instead. Whether the VNIC should be assigned a public IP address (Always EPHEMERAL)."
   type        = bool
   default     = false
 }
@@ -151,9 +151,20 @@ variable "private_ips" {
 }
 
 variable "public_ip" {
-  description = "OCID of the Public IP to attach to primary vnic."
-  type = string
-  default = null
+  description = "OCID of the Public IP to attach to primary vnic. Valid values are NONE, RESERVED or EPHEMERAL."
+  type        = string
+  default     = "NONE"
+
+  validation {
+    condition     = contains(["NONE", "RESERVED", "EPHEMERAL"], var.public_ip)
+    error_message = "Accepted values are NONE, RESERVED or EPHEMERAL."
+  }
+}
+
+variable "public_ip_display_name" {
+  description = "(Updatable) A user-friendly name. Does not have to be unique, and it's changeable."
+  type        = string
+  default     = null
 }
 
 variable "skip_source_dest_check" {
